--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,16 +18,4 @@ jobs:
         with:
           java-version: 11
       - name: Build
-        run: ./mvnw clean package -Dquarkus.package.type=uber-jar -B
-      - name: install ssh key
-        uses: webfactory/ssh-agent@v0.4.1
-        with:
-          ssh-private-key: ${{ secrets.ORAVM }}
-      - name: create .ssh/known_hosts
-        run: |
-          ssh-keyscan -H -t rsa -v 129.159.253.242  >> ~/.ssh/known_hosts
-      - name: copy binaries to oravm
-        run: |
-          echo "Hallo ich bin hier"
-          ls -l target/
-          scp target/actions-demo-1.0.0-SNAPSHOT-runner.jar ubuntu@129.159.253.242:
+        run: ./mvnw verify -B
